--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,10 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+img {
+    display: block;
+}
+
 .container {
     max-width: 1158px;
     padding: 0 15px;
@@ -63,6 +67,8 @@ h1, h2, h3, h4, h5, h6, p {
 border-bottom: 1px solid #e7e9fc;
 }
 
+
+
 .header-container {
     display: flex;
     align-items: center;
@@ -71,6 +77,32 @@ border-bottom: 1px solid #e7e9fc;
 .header-nav {
     display: flex;
     align-items: center;
+}
+
+/* main */
+
+.page-hero {
+    padding: 188px 0;
+}
+
+.hero-title {
+    max-width: 496px;
+    font-size: 56px;
+line-height: 1.07;
+letter-spacing: 0.02em;
+text-align: center;
+}
+
+.button-hero {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+
+    border-radius: 4px;
+/* padding: 16px 32px; */
+
+
 }
 
 .logo {
@@ -179,7 +211,17 @@ color: #404bbf;
     letter-spacing: 0.02em;
 }
 
+.peculiarities-list {
+    display: flex;
+    gap: 24px;
+}
+
+.peculiarities-item{
+    width: calc((100% – 72px)/4);
+}
+
 .peculiarities-title {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
