--- a/css/styles.css
+++ b/css/styles.css
@@ -236,10 +236,49 @@ color: #404bbf;
     letter-spacing: 0.02em;
    
 }
-
+ /* our team */
 .our-team {
-    background-color:  #f4f4fd;;
+    background-color:  #f4f4fd;
+}
 
+.ourteam-title {
+    margin-bottom: 72px;
+}
+
+.ourteam-list {
+    display: flex;
+    gap: 24px;
+}
+
+.ourteam-item {
+    width: calc((100% – 72px)/4);
+
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 32px; */
+
+    border-radius: 0 0 4px 4px;
+    
+    width: 264px;
+    height: 380px;
+
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+
+}
+
+.employee-characteristics{
+    padding: 32px 0
+}
+
+.title-team {
+    text-align: center;
+    margin-bottom: 8px
+}
+
+.text-team {
+     text-align: center;
 }
 
 .portfolio-title {
