--- a/css/styles.css
+++ b/css/styles.css
@@ -281,16 +281,35 @@ color: #404bbf;
      text-align: center;
 }
 
+/* portfolio */
+
 .portfolio-title {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    text-transform: capitalize 
+    text-transform: capitalize;
+
+    margin-bottom: 72px;
 }
+
 .portfolio-list {
     background-color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item{
+    width: calc((100% – 48px)/3);
+}
+
+.container-item {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc; 
+    border-top-style: none;
 }
 
 .head-portfolio {
@@ -299,6 +318,8 @@ color: #404bbf;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+    margin-bottom: 8px;
 }
 
 .portfolio-text {
