--- a/css/styles.css
+++ b/css/styles.css
@@ -330,9 +330,11 @@ color: #404bbf;
     color: #434455;
 }
 
+/* footer */
 
 .page-footer {
-    background-color: #2e2f42;;
+    background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-text {
@@ -341,4 +343,10 @@ color: #404bbf;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+
+    max-width: 264px;
+}
+
+.logo-footer {
+    margin-bottom: 16px;
 }
