--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,9 @@ body {
      background-color: #2e2f42;;
 }
 
-.hero-title {
-   font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-}
+
+
+
 
 .button-hero {
     letter-spacing: 0.04em;
@@ -83,14 +78,19 @@ border-bottom: 1px solid #e7e9fc;
 
 .page-hero {
     padding: 188px 0;
+
 }
 
 .hero-title {
-    max-width: 496px;
+   font-weight: 700;
+   max-width: 496px;
     font-size: 56px;
-line-height: 1.07;
-letter-spacing: 0.02em;
-text-align: center;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .button-hero {
@@ -100,6 +100,9 @@ text-align: center;
     border: none;
 
     border-radius: 4px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 48px;
 /* padding: 16px 32px; */
 
 
@@ -302,8 +305,10 @@ color: #404bbf;
     row-gap: 48px;
 }
 
-.portfolio-item{
+
+.portfolio-item {
     width: calc((100% – 48px)/3);
+
 }
 
 .container-item {
@@ -349,4 +354,5 @@ color: #404bbf;
 
 .logo-footer {
     margin-bottom: 16px;
+    display: inline-block;
 }
