--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,9 @@ color: #404bbf;
 
 
 .portfolio-item {
+    display: block;
     width: calc((100% – 48px)/3);
+    height: 420px;
 
 }
 
@@ -338,8 +340,12 @@ color: #404bbf;
 /* footer */
 
 .page-footer {
-    background-color: #2e2f42;
+    
     padding: 100px 0;
+}
+
+.footer-section {
+background-color: #2e2f42;
 }
 
 .footer-text {
