--- a/css/styles.css
+++ b/css/styles.css
@@ -307,10 +307,7 @@ color: #404bbf;
 
 
 .portfolio-item {
-    display: block;
-    width: calc((100% – 48px)/3);
-    height: 420px;
-
+    width: calc((100% - 48px)/3);
 }
 
 .container-item {
